<resources>
    <string name="app_name">MyADHD</string>
    <string name="sign_in"> AUTENTIFICARE</string>
    <string name="username">Nume Utilizator</string>
    <string name="password">Parolă</string>
    <string name="log_in">AUTENTIFICARE</string>
    <string name="forgotpass">Ai uitat parola?</string>
    <string name="log_in_with">Autentificare cu </string>
    <string name="noaccount">Nu ai cont? </string>
    <string name="sign_up"> Creează un cont</string>
    <string name="signup">Creare cont</string>
    <string name="name"> Nume</string>
    <string name="lname">Prenume </string>
    <string name="email"> Email</string>
    <string name="confpass">Confirmați Parola</string>
    <string name="adhd">ADHD Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="panou_de_control">PANOU DE CONTROL</string>
    <string name="adaug_un_copil">Adaugă</string>
    <string name="v_rst">Vârstă</string>
    <string name="gen">Gen</string>
    <string name="adaug">Adaugă</string>
    <string name="logout">LogOut</string>
    <string name="incepe_testul">Începe Testul</string>
    <string name="copiii_mei">COPIII MEI:</string>
    <string name="aici_va_fi_intrebarea">Aici va fi intrebarea</string>
    <string name="ntrebarea_1_x">Întrebarea: 1/x</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="values">În ultima lună acest lucru s-a întamplat: 0 (Niciodată, Rareori), 1 (Ocazional), 2 (Deseori, Destul de frecvent), 3 (Foarte frecvent).</string>
    <string name="nume_prenume">Nume_Prenume</string>
    <string name="adresa_de_email">Adresa de email</string>
    <string name="parola">Parola: ***********</string>
    <string name="actualizeaz">Actualizează</string>
    <string name="panou_de_contrl">Panou de control</string>
    <string name="profilul_meu">Profilul meu</string>
    <string name="x">X</string>
    <string name="modific">Modifică</string>
    <string name="usernameUser">Username</string>
    <string name="parol">Parolă</string>
    <string name="terge">Șterge</string>
    <string name="rezultatele_testelor">REZULTATELE TESTELOR</string>
    <string name="spinner_title" />
    <string name="cod_copil">Cod Copil:</string>
    <string name="vezi_rezultate">Vezi rezultate</string>
    <string name="timestamp">Timestamp</string>
    <string name="procentaj_de_veridicitate">Procentaj de veridicitate</string>
    <string name="diagnostic">Diagnostic</string>
</resources>