<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myadhd.Activities.SignUpActivity">

    <TextView
        android:id="@+id/diagnostic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/diagnostic"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diagnostic"
        android:textColor="@color/black"
        android:text="@string/procentaj_de_veridicitate"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/percent"
        android:textColor="@color/black"
        android:text="@string/timestamp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timestamp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:text="@string/cod_copil"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>