<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:padding="5dp"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".myadhd.Activities.UpdateUserProfileActivity"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="X"
        android:textStyle="bold"
        android:textColor="@color/black"
    />

    <TextView
        android:id="@+id/modifiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/modific"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modifiy"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20sp"
        android:hint="@string/name"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10sp"
        android:hint="@string/lname"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lname"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_sentiment_satisfied_alt_24"
        android:drawablePadding="20sp"
        android:hint="@string/username"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_sentiment_satisfied_alt_24"
        android:drawablePadding="20sp"
        android:hint="@string/email"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_interests_24"
        android:drawablePadding="20sp"
        android:hint="@string/password"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/updateUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitCenter"
        android:text="@string/actualizeaz" />
</RelativeLayout>