<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".myadhd.Activities.LogInActivity">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20sp"
        android:hint="@string/email"
        android:padding="20sp"
        android:scaleType="fitCenter"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#80ffffff"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="10sp"
        android:padding="20sp"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="20sp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        tools:ignore="MissingClass" />


    <ProgressBar
        android:id="@+id/idLoadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:textColor="@color/white"
        android:layout_marginStart="175sp"
        android:layout_marginTop="0sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/noaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idLoadingPB"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:fontFamily="casual"
        android:scaleType="fitCenter"
        android:text="@string/noaccount"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noaccount"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/black"
        android:scaleType="fitCenter"
        android:text="Crează cont"
        android:textColor="@color/white"
        tools:ignore="MissingClass" />

</RelativeLayout>